# aws-account-intelligence

./: .env.example  .gitignore  MANIFEST.in  README.md  TODO.md  aws-account-intelligence-prd.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: smoke_aws_orgs.py
src/aws_account_intelligence/: audit.py  config.py  iam_validation.py  reporting.py  smoke_aws_orgs.py
src/aws_account_intelligence/analysis/: dependency_graph.py  impact.py
src/aws_account_intelligence/cli/: main.py
src/aws_account_intelligence/collectors/: aws.py  base.py  factory.py  fixtures.py  orgs.py
src/aws_account_intelligence/fixtures/: __init__.py  sample_account.json
src/aws_account_intelligence/models/: __init__.py  schemas.py
src/aws_account_intelligence/pipeline/: __init__.py  runner.py
src/aws_account_intelligence/storage/: __init__.py  database.py
src/aws_account_intelligence/web/: __init__.py  dashboard.py
terraform/: README.md  main.tf
terraform/org-management/: main.tf
terraform/org-member/: main.tf
tests/: conftest.py  test_analysis.py  test_api.py  test_aws_collector.py  test_cli.py  test_iam_validation.py  test_models.py  test_pipeline.py  test_smoke_aws_orgs.py
